fix scrolling issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -84,11 +84,11 @@ button:hover{
     width:100vw !important;
     height:100vh !important;
     z-index:5000;
+    border-bottom:0;
 }
 #splash-body{
     height:100%;
     padding-bottom:20px;
-    -webkit-overflow-scrolling: touch;
 }
 #splash-title{
     font-size:48px;
@@ -99,6 +99,7 @@ button:hover{
 #start{
     margin:auto;
     display:block;
+    margin-bottom:25px;
 }
 
 /*STOP CONTENT STYLING*/
@@ -145,3 +146,4 @@ button:hover{
         width:300px;
     }
 }
+
